--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -82,5 +82,155 @@
   "passwordMinLength": "Password must be at least {{min}} characters!",
   "logout": "Logout",
   "profile": "Profile",
-  "logoutFailed": "Logout failed!"
+  "logoutFailed": "Logout failed!",
+  "common": {
+    "actions": "Actions",
+    "edit": "Edit",
+    "cancel": "Cancel",
+    "yes": "Yes",
+    "no": "No",
+    "create": "Create",
+    "update": "Update",
+    "delete": "Delete",
+    "save": "Save",
+    "close": "Close"
+  },
+  "meeting": {
+    "title": "Meetings",
+    "create": "Create Meeting",
+    "edit": "Edit Meeting",
+    "startTime": "Start Time",
+    "duration": "Duration",
+    "durationMinutes": "{{minutes}} minutes",
+    "status": "Status",
+    "status.scheduled": "Scheduled",
+    "status.ongoing": "Ongoing",
+    "status.finished": "Finished",
+    "status.cancelled": "Cancelled",
+    "participants": "Participants",
+    "startMeeting": "Start Meeting",
+    "endMeeting": "End Meeting",
+    "cancelMeeting": "Cancel Meeting",
+    "deleteConfirm": "Are you sure you want to delete this meeting?",
+    "deleted": "Meeting deleted successfully",
+    "deleteFailed": "Failed to delete meeting",
+    "started": "Meeting started successfully",
+    "startFailed": "Failed to start meeting",
+    "ended": "Meeting ended successfully",
+    "endFailed": "Failed to end meeting",
+    "cancelled": "Meeting cancelled successfully",
+    "cancelFailed": "Failed to cancel meeting",
+    "created": "Meeting created successfully",
+    "createFailed": "Failed to create meeting",
+    "updated": "Meeting updated successfully",
+    "updateFailed": "Failed to update meeting",
+    "stats": {
+      "total": "Total Meetings",
+      "scheduled": "Scheduled",
+      "ongoing": "Ongoing",
+      "upcoming": "Upcoming"
+    },
+    "pagination": "{{from}}-{{to}} of {{total}} meetings",
+    "titleRequired": "Please enter meeting title",
+    "titlePlaceholder": "Enter meeting title",
+    "description": "Description",
+    "descriptionPlaceholder": "Enter meeting description",
+    "startTimeRequired": "Please select start time",
+    "startTimePlaceholder": "Select start time",
+    "durationRequired": "Please enter duration",
+    "durationMin15": "Duration must be at least 15 minutes",
+    "durationMax480": "Duration must be at most 8 hours",
+    "durationPlaceholder": "Enter duration",
+    "link": "Meeting Link",
+    "linkPlaceholder": "Enter meeting link (optional)"
+  },
+  "calendar": {
+    "title": "Calendar",
+    "description": "Manage and view all your events, meetings, and schedules in one place",
+    "editEvent": "Edit Event",
+    "eventDetails": "Event Details",
+    "allDay": "All Day",
+    "previous": "Previous",
+    "next": "Next",
+    "today": "Today",
+    "month": "Month",
+    "week": "Week",
+    "day": "Day",
+    "agenda": "Agenda",
+    "date": "Date",
+    "time": "Time",
+    "event": "Event",
+    "noEventsInRange": "No events in this date range",
+    "showMore": "Show more {{total}}",
+    "eventTitle": "Title",
+    "eventDescription": "Description",
+    "location": "Location",
+    "type": "Type",
+    "status": "Status",
+    "meeting": "Meeting",
+    "task": "Task",
+    "reminder": "Reminder",
+    "other": "Other",
+    "scheduled": "Scheduled",
+    "ongoing": "Ongoing",
+    "completed": "Completed",
+    "cancelled": "Cancelled"
+  },
+  "documents": {
+    "title": "Documents",
+    "description": "Manage and organize all your documents in one place",
+    "upload": "Upload Document",
+    "uploadDocument": "Upload Document",
+    "uploadSuccess": "Document uploaded successfully",
+    "uploadFailed": "Failed to upload document",
+    "uploading": "Uploading...",
+    "pleaseSelectFile": "Please select a file to upload",
+    "dragAndDrop": "Click or drag file to this area to upload",
+    "uploadHint": "Support for PDF, Word, Excel, images and text files",
+    "selectedFile": "Selected File",
+    "titlePlaceholder": "Enter document title",
+    "descriptionPlaceholder": "Enter document description",
+    "titleRequired": "Please enter document title",
+    "categoryRequired": "Please select a category",
+    "selectCategory": "Select category",
+    "selectProject": "Select project",
+    "addTag": "Add tag",
+    "file": "File",
+    "fileName": "File Name",
+    "fileType": "File Type",
+    "fileSize": "File Size",
+    "category": "Category",
+    "status": "Status",
+    "uploadedBy": "Uploaded By",
+    "uploadedAt": "Uploaded At",
+    "project": "Project",
+    "tags": "Tags",
+    "comments": "Comments",
+    "totalDocuments": "Total Documents",
+    "totalSize": "Total Size",
+    "recentUploads": "Recent Uploads",
+    "published": "Published",
+    "searchPlaceholder": "Search documents...",
+    "filterByCategory": "Filter by category",
+    "filterByStatus": "Filter by status",
+    "noDocuments": "No documents found",
+    "deleteConfirm": "Delete Document",
+    "deleteConfirmText": "Are you sure you want to delete \"{{title}}\"?",
+    "deleted": "Document deleted successfully",
+    "deleteFailed": "Failed to delete document",
+    "downloadStarted": "Download started",
+    "downloadFailed": "Failed to download document",
+    "categories": {
+      "project": "Project",
+      "meeting": "Meeting",
+      "policy": "Policy",
+      "template": "Template",
+      "other": "Other"
+    },
+    "statuses": {
+      "draft": "Draft",
+      "published": "Published",
+      "archived": "Archived"
+    }
+  }
 } 
