--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -82,5 +82,155 @@
   "passwordMinLength": "Mật khẩu phải có ít nhất {{min}} ký tự!",
   "logout": "Đăng xuất",
   "profile": "Trang cá nhân",
-  "logoutFailed": "Đăng xuất thất bại!"
+  "logoutFailed": "Đăng xuất thất bại!",
+  "common": {
+    "actions": "Thao tác",
+    "edit": "Chỉnh sửa",
+    "cancel": "Hủy",
+    "yes": "Có",
+    "no": "Không",
+    "create": "Tạo",
+    "update": "Cập nhật",
+    "delete": "Xóa",
+    "save": "Lưu",
+    "close": "Đóng"
+  },
+  "meeting": {
+    "title": "Cuộc họp",
+    "create": "Tạo cuộc họp",
+    "edit": "Chỉnh sửa cuộc họp",
+    "startTime": "Thời gian bắt đầu",
+    "duration": "Thời lượng",
+    "durationMinutes": "{{minutes}} phút",
+    "status": "Trạng thái",
+    "status.scheduled": "Đã lên lịch",
+    "status.ongoing": "Đang diễn ra",
+    "status.finished": "Đã kết thúc",
+    "status.cancelled": "Đã hủy",
+    "participants": "Người tham gia",
+    "startMeeting": "Bắt đầu cuộc họp",
+    "endMeeting": "Kết thúc cuộc họp",
+    "cancelMeeting": "Hủy cuộc họp",
+    "deleteConfirm": "Bạn có chắc muốn xóa cuộc họp này?",
+    "deleted": "Cuộc họp đã được xóa thành công",
+    "deleteFailed": "Xóa cuộc họp thất bại",
+    "started": "Cuộc họp đã bắt đầu thành công",
+    "startFailed": "Bắt đầu cuộc họp thất bại",
+    "ended": "Cuộc họp đã kết thúc thành công",
+    "endFailed": "Kết thúc cuộc họp thất bại",
+    "cancelled": "Cuộc họp đã bị hủy thành công",
+    "cancelFailed": "Hủy cuộc họp thất bại",
+    "created": "Cuộc họp đã được tạo thành công",
+    "createFailed": "Tạo cuộc họp thất bại",
+    "updated": "Cuộc họp đã được cập nhật thành công",
+    "updateFailed": "Cập nhật cuộc họp thất bại",
+    "stats": {
+      "total": "Tổng cuộc họp",
+      "scheduled": "Đã lên lịch",
+      "ongoing": "Đang diễn ra",
+      "upcoming": "Sắp diễn ra"
+    },
+    "pagination": "{{from}}-{{to}} của {{total}} cuộc họp",
+    "titleRequired": "Vui lòng nhập tiêu đề cuộc họp",
+    "titlePlaceholder": "Nhập tiêu đề cuộc họp",
+    "description": "Mô tả",
+    "descriptionPlaceholder": "Nhập mô tả cuộc họp",
+    "startTimeRequired": "Vui lòng chọn thời gian bắt đầu",
+    "startTimePlaceholder": "Chọn thời gian bắt đầu",
+    "durationRequired": "Vui lòng nhập thời lượng",
+    "durationMin15": "Thời lượng tối thiểu 15 phút",
+    "durationMax480": "Thời lượng tối đa 8 giờ",
+    "durationPlaceholder": "Nhập thời lượng",
+    "link": "Link cuộc họp",
+    "linkPlaceholder": "Nhập link cuộc họp (tùy chọn)"
+  },
+  "calendar": {
+    "title": "Lịch",
+    "description": "Quản lý và xem tất cả sự kiện, cuộc họp và lịch trình của bạn tại một nơi",
+    "editEvent": "Chỉnh sửa sự kiện",
+    "eventDetails": "Chi tiết sự kiện",
+    "allDay": "Cả ngày",
+    "previous": "Trước",
+    "next": "Tiếp",
+    "today": "Hôm nay",
+    "month": "Tháng",
+    "week": "Tuần",
+    "day": "Ngày",
+    "agenda": "Lịch trình",
+    "date": "Ngày",
+    "time": "Thời gian",
+    "event": "Sự kiện",
+    "noEventsInRange": "Không có sự kiện nào trong khoảng thời gian này",
+    "showMore": "Hiển thị thêm {{total}}",
+    "eventTitle": "Tiêu đề",
+    "eventDescription": "Mô tả",
+    "location": "Địa điểm",
+    "type": "Loại",
+    "status": "Trạng thái",
+    "meeting": "Cuộc họp",
+    "task": "Nhiệm vụ",
+    "reminder": "Nhắc nhở",
+    "other": "Khác",
+    "scheduled": "Đã lên lịch",
+    "ongoing": "Đang diễn ra",
+    "completed": "Hoàn thành",
+    "cancelled": "Đã hủy"
+  },
+  "documents": {
+    "title": "Tài liệu",
+    "description": "Quản lý và tổ chức tất cả tài liệu của bạn tại một nơi",
+    "upload": "Tải lên tài liệu",
+    "uploadDocument": "Tải lên tài liệu",
+    "uploadSuccess": "Tải lên tài liệu thành công",
+    "uploadFailed": "Tải lên tài liệu thất bại",
+    "uploading": "Đang tải lên...",
+    "pleaseSelectFile": "Vui lòng chọn file để tải lên",
+    "dragAndDrop": "Click hoặc kéo file vào đây để tải lên",
+    "uploadHint": "Hỗ trợ PDF, Word, Excel, hình ảnh và file text",
+    "selectedFile": "File đã chọn",
+    "titlePlaceholder": "Nhập tiêu đề tài liệu",
+    "descriptionPlaceholder": "Nhập mô tả tài liệu",
+    "titleRequired": "Vui lòng nhập tiêu đề tài liệu",
+    "categoryRequired": "Vui lòng chọn danh mục",
+    "selectCategory": "Chọn danh mục",
+    "selectProject": "Chọn dự án",
+    "addTag": "Thêm tag",
+    "file": "File",
+    "fileName": "Tên file",
+    "fileType": "Loại file",
+    "fileSize": "Kích thước file",
+    "category": "Danh mục",
+    "status": "Trạng thái",
+    "uploadedBy": "Tải lên bởi",
+    "uploadedAt": "Tải lên lúc",
+    "project": "Dự án",
+    "tags": "Tags",
+    "comments": "Bình luận",
+    "totalDocuments": "Tổng tài liệu",
+    "totalSize": "Tổng kích thước",
+    "recentUploads": "Tải lên gần đây",
+    "published": "Đã xuất bản",
+    "searchPlaceholder": "Tìm kiếm tài liệu...",
+    "filterByCategory": "Lọc theo danh mục",
+    "filterByStatus": "Lọc theo trạng thái",
+    "noDocuments": "Không tìm thấy tài liệu",
+    "deleteConfirm": "Xóa tài liệu",
+    "deleteConfirmText": "Bạn có chắc muốn xóa \"{{title}}\"?",
+    "deleted": "Xóa tài liệu thành công",
+    "deleteFailed": "Xóa tài liệu thất bại",
+    "downloadStarted": "Bắt đầu tải xuống",
+    "downloadFailed": "Tải xuống thất bại",
+    "categories": {
+      "project": "Dự án",
+      "meeting": "Cuộc họp",
+      "policy": "Chính sách",
+      "template": "Mẫu",
+      "other": "Khác"
+    },
+    "statuses": {
+      "draft": "Bản nháp",
+      "published": "Đã xuất bản",
+      "archived": "Đã lưu trữ"
+    }
+  }
 } 
