--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -93,7 +93,221 @@
     "update": "Update",
     "delete": "Delete",
     "save": "Save",
-    "close": "Close"
+    "close": "Close",
+    "refresh": "Refresh",
+    "notes": "Notes",
+    "description": "Description",
+    "no_description": "No description",
+    "dashboard": "Dashboard"
+  },
+  "finance": {
+    "title": "Finance",
+    "description": "Manage payroll, expenses, and financial records",
+    "finance": "Finance",
+    "payroll": "Payroll",
+    "expenses": "Expenses",
+    "salary_components": "Salary Components",
+    "stats": {
+      "total_payroll": "Total Payroll",
+      "total_expenses": "Total Expenses",
+      "pending_approvals": "Pending Approvals",
+      "monthly_budget": "Monthly Budget"
+    }
+  },
+  "payroll": {
+    "title": "Payroll",
+    "description": "Manage employee payroll and salary calculations",
+    "payroll_management": "Payroll Management",
+    "create_payroll": "Create Payroll",
+    "edit_payroll": "Edit Payroll",
+    "generate_payrolls": "Generate Payrolls",
+    "payroll_details": "Payroll Details",
+    "code": "Code",
+    "employee": "Employee",
+    "select_employee": "Select employee",
+    "employee_required": "Please select an employee",
+    "pay_period": "Pay Period",
+    "pay_period_start": "Start Date",
+    "pay_period_end": "End Date",
+    "pay_period_required": "Please select pay period",
+    "basic_salary": "Basic Salary",
+    "basic_salary_required": "Please enter basic salary",
+    "working_days": "Working Days",
+    "working_days_required": "Please enter working days",
+    "overtime_hours": "Overtime Hours",
+    "bonus": "Bonus",
+    "gross_salary": "Gross Salary",
+    "deductions": "Deductions",
+    "net_salary": "Net Salary",
+    "status": "Status",
+    "status_pending": "Pending",
+    "status_approved": "Approved",
+    "status_paid": "Paid",
+    "status_rejected": "Rejected",
+    "approve": "Approve",
+    "reject": "Reject",
+    "mark_as_paid": "Mark as Paid",
+    "generate": "Generate",
+    "total_payrolls": "Total Payrolls",
+    "total_amount": "Total Amount",
+    "pending": "Pending",
+    "paid": "Paid",
+    "created_successfully": "Payroll created successfully",
+    "creation_failed": "Failed to create payroll",
+    "updated_successfully": "Payroll updated successfully",
+    "update_failed": "Failed to update payroll",
+    "deleted_successfully": "Payroll deleted successfully",
+    "deletion_failed": "Failed to delete payroll",
+    "approved_successfully": "Payroll approved successfully",
+    "approval_failed": "Failed to approve payroll",
+    "marked_as_paid_successfully": "Payroll marked as paid successfully",
+    "payment_failed": "Failed to mark payroll as paid",
+    "generated_successfully": "Payrolls generated successfully",
+    "generation_failed": "Failed to generate payrolls",
+    "delete_confirm": "Are you sure you want to delete this payroll?",
+    "no_payrolls": "No payrolls found",
+    "search_placeholder": "Search payrolls...",
+    "filter_by_status": "Filter by status",
+    "filter_by_employee": "Filter by employee",
+    "filter_by_period": "Filter by period"
+  },
+  "expense": {
+    "title": "Expenses",
+    "description": "Manage and track company expenses",
+    "expense_management": "Expense Management",
+    "create_expense": "Create Expense",
+    "edit_expense": "Edit Expense",
+    "reject_expense": "Reject Expense",
+    "expense_details": "Expense Details",
+    "code": "Code",
+    "title": "Title",
+    "enter_title": "Enter expense title",
+    "title_required": "Please enter expense title",
+    "amount": "Amount",
+    "amount_required": "Please enter amount",
+    "type": "Type",
+    "type_required": "Please select expense type",
+    "select_type": "Select expense type",
+    "type_operational": "Operational",
+    "type_administrative": "Administrative",
+    "type_marketing": "Marketing",
+    "type_travel": "Travel",
+    "type_utilities": "Utilities",
+    "type_maintenance": "Maintenance",
+    "type_other": "Other",
+    "expense_date": "Expense Date",
+    "expense_date_required": "Please select expense date",
+    "due_date": "Due Date",
+    "employee": "Employee",
+    "employee_required": "Please select an employee",
+    "select_employee": "Select employee",
+    "department": "Department",
+    "select_department": "Select department",
+    "receipt": "Receipt",
+    "upload_receipt": "Upload Receipt",
+    "rejection_reason": "Rejection Reason",
+    "rejection_reason_required": "Please enter rejection reason",
+    "enter_rejection_reason": "Enter rejection reason",
+    "status": "Status",
+    "status_pending": "Pending",
+    "status_approved": "Approved",
+    "status_rejected": "Rejected",
+    "status_paid": "Paid",
+    "approve": "Approve",
+    "reject": "Reject",
+    "mark_as_paid": "Mark as Paid",
+    "total_expenses": "Total Expenses",
+    "total_amount": "Total Amount",
+    "pending": "Pending",
+    "paid": "Paid",
+    "created_successfully": "Expense created successfully",
+    "creation_failed": "Failed to create expense",
+    "updated_successfully": "Expense updated successfully",
+    "update_failed": "Failed to update expense",
+    "deleted_successfully": "Expense deleted successfully",
+    "deletion_failed": "Failed to delete expense",
+    "approved_successfully": "Expense approved successfully",
+    "approval_failed": "Failed to approve expense",
+    "rejected_successfully": "Expense rejected successfully",
+    "rejection_failed": "Failed to reject expense",
+    "marked_as_paid_successfully": "Expense marked as paid successfully",
+    "payment_failed": "Failed to mark expense as paid",
+    "delete_confirm": "Are you sure you want to delete this expense?",
+    "no_expenses": "No expenses found",
+    "search_placeholder": "Search expenses...",
+    "filter_by_status": "Filter by status",
+    "filter_by_type": "Filter by type",
+    "filter_by_employee": "Filter by employee",
+    "stats": {
+      "total_expenses": "Total Expenses",
+      "total_amount": "Total Amount",
+      "pending_amount": "Pending Amount",
+      "approved_amount": "Approved Amount",
+      "rejected_amount": "Rejected Amount",
+      "paid_amount": "Paid Amount"
+    }
+  },
+  "salary_component": {
+    "salary_component_management": "Salary Component Management",
+    "title": "Salary Components",
+    "description": "Manage salary components and allowances",
+    "create_component": "Create Component",
+    "edit_component": "Edit Component",
+    "component_details": "Component Details",
+    "name": "Name",
+    "name_required": "Please enter component name",
+    "enter_name": "Enter component name",
+    "code": "Code",
+    "code_required": "Please enter component code",
+    "enter_code": "Enter component code",
+    "type": "Type",
+    "type_required": "Please select component type",
+    "select_type": "Select component type",
+    "type_allowance": "Allowance",
+    "type_deduction": "Deduction",
+    "type_bonus": "Bonus",
+    "type_overtime": "Overtime",
+    "calculation_type": "Calculation Type",
+    "calculation_type_required": "Please select calculation type",
+    "select_calculation_type": "Select calculation type",
+    "calc_fixed": "Fixed Amount",
+    "calc_percentage": "Percentage",
+    "calc_formula": "Formula",
+    "amount": "Amount",
+    "amount_required": "Please enter amount",
+    "percentage": "Percentage",
+    "percentage_required": "Please enter percentage",
+    "formula": "Formula",
+    "enter_formula": "Enter calculation formula",
+    "is_taxable": "Taxable",
+    "is_active": "Active",
+    "is_required": "Required",
+    "description": "Description",
+    "enter_description": "Enter component description",
+    "sort_order": "Sort Order",
+    "total_components": "Total Components",
+    "active_components": "Active Components",
+    "allowances": "Allowances",
+    "deductions": "Deductions",
+    "taxable": "Taxable",
+    "non_taxable": "Non-Taxable",
+    "active": "Active",
+    "inactive": "Inactive",
+    "activate": "Activate",
+    "deactivate": "Deactivate",
+    "created_successfully": "Component created successfully",
+    "creation_failed": "Failed to create component",
+    "updated_successfully": "Component updated successfully",
+    "update_failed": "Failed to update component",
+    "deleted_successfully": "Component deleted successfully",
+    "deletion_failed": "Failed to delete component",
+    "status_updated": "Component status updated successfully",
+    "status_update_failed": "Failed to update component status",
+    "delete_confirm": "Are you sure you want to delete this component?",
+    "no_components": "No salary components found",
+    "search_placeholder": "Search components...",
+    "filter_by_type": "Filter by type",
+    "filter_by_status": "Filter by status"
   },
   "meeting": {
     "title": "Meetings",
