--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -93,7 +93,221 @@
     "update": "Cập nhật",
     "delete": "Xóa",
     "save": "Lưu",
-    "close": "Đóng"
+    "close": "Đóng",
+    "refresh": "Làm mới",
+    "notes": "Ghi chú",
+    "description": "Mô tả",
+    "no_description": "Không có mô tả",
+    "dashboard": "Bảng điều khiển"
+  },
+  "finance": {
+    "title": "Tài chính",
+    "description": "Quản lý lương, chi phí và hồ sơ tài chính",
+    "finance": "Tài chính",
+    "payroll": "Lương",
+    "expenses": "Chi phí",
+    "salary_components": "Thành phần lương",
+    "stats": {
+      "total_payroll": "Tổng lương",
+      "total_expenses": "Tổng chi phí",
+      "pending_approvals": "Chờ phê duyệt",
+      "monthly_budget": "Ngân sách tháng"
+    }
+  },
+  "payroll": {
+    "title": "Lương",
+    "description": "Quản lý lương nhân viên và tính toán lương",
+    "payroll_management": "Quản lý lương",
+    "create_payroll": "Tạo lương",
+    "edit_payroll": "Chỉnh sửa lương",
+    "generate_payrolls": "Tạo lương hàng loạt",
+    "payroll_details": "Chi tiết lương",
+    "code": "Mã",
+    "employee": "Nhân viên",
+    "select_employee": "Chọn nhân viên",
+    "employee_required": "Vui lòng chọn nhân viên",
+    "pay_period": "Kỳ lương",
+    "pay_period_start": "Ngày bắt đầu",
+    "pay_period_end": "Ngày kết thúc",
+    "pay_period_required": "Vui lòng chọn kỳ lương",
+    "basic_salary": "Lương cơ bản",
+    "basic_salary_required": "Vui lòng nhập lương cơ bản",
+    "working_days": "Số ngày làm việc",
+    "working_days_required": "Vui lòng nhập số ngày làm việc",
+    "overtime_hours": "Giờ làm thêm",
+    "bonus": "Thưởng",
+    "gross_salary": "Lương gộp",
+    "deductions": "Khấu trừ",
+    "net_salary": "Lương thực nhận",
+    "status": "Trạng thái",
+    "status_pending": "Chờ duyệt",
+    "status_approved": "Đã duyệt",
+    "status_paid": "Đã thanh toán",
+    "status_rejected": "Từ chối",
+    "approve": "Duyệt",
+    "reject": "Từ chối",
+    "mark_as_paid": "Đánh dấu đã thanh toán",
+    "generate": "Tạo",
+    "total_payrolls": "Tổng lương",
+    "total_amount": "Tổng số tiền",
+    "pending": "Chờ duyệt",
+    "paid": "Đã thanh toán",
+    "created_successfully": "Tạo lương thành công",
+    "creation_failed": "Tạo lương thất bại",
+    "updated_successfully": "Cập nhật lương thành công",
+    "update_failed": "Cập nhật lương thất bại",
+    "deleted_successfully": "Xóa lương thành công",
+    "deletion_failed": "Xóa lương thất bại",
+    "approved_successfully": "Duyệt lương thành công",
+    "approval_failed": "Duyệt lương thất bại",
+    "marked_as_paid_successfully": "Đánh dấu đã thanh toán thành công",
+    "payment_failed": "Đánh dấu đã thanh toán thất bại",
+    "generated_successfully": "Tạo lương hàng loạt thành công",
+    "generation_failed": "Tạo lương hàng loạt thất bại",
+    "delete_confirm": "Bạn có chắc muốn xóa lương này?",
+    "no_payrolls": "Không tìm thấy lương",
+    "search_placeholder": "Tìm kiếm lương...",
+    "filter_by_status": "Lọc theo trạng thái",
+    "filter_by_employee": "Lọc theo nhân viên",
+    "filter_by_period": "Lọc theo kỳ"
+  },
+  "expense": {
+    "title": "Chi phí",
+    "description": "Quản lý và theo dõi chi phí công ty",
+    "expense_management": "Quản lý chi phí",
+    "create_expense": "Tạo chi phí",
+    "edit_expense": "Chỉnh sửa chi phí",
+    "reject_expense": "Từ chối chi phí",
+    "expense_details": "Chi tiết chi phí",
+    "code": "Mã",
+    "title": "Tiêu đề",
+    "enter_title": "Nhập tiêu đề chi phí",
+    "title_required": "Vui lòng nhập tiêu đề chi phí",
+    "amount": "Số tiền",
+    "amount_required": "Vui lòng nhập số tiền",
+    "type": "Loại",
+    "type_required": "Vui lòng chọn loại chi phí",
+    "select_type": "Chọn loại chi phí",
+    "type_operational": "Vận hành",
+    "type_administrative": "Hành chính",
+    "type_marketing": "Marketing",
+    "type_travel": "Du lịch",
+    "type_utilities": "Tiện ích",
+    "type_maintenance": "Bảo trì",
+    "type_other": "Khác",
+    "expense_date": "Ngày chi phí",
+    "expense_date_required": "Vui lòng chọn ngày chi phí",
+    "due_date": "Ngày đến hạn",
+    "employee": "Nhân viên",
+    "employee_required": "Vui lòng chọn nhân viên",
+    "select_employee": "Chọn nhân viên",
+    "department": "Phòng ban",
+    "select_department": "Chọn phòng ban",
+    "receipt": "Hóa đơn",
+    "upload_receipt": "Tải lên hóa đơn",
+    "rejection_reason": "Lý do từ chối",
+    "rejection_reason_required": "Vui lòng nhập lý do từ chối",
+    "enter_rejection_reason": "Nhập lý do từ chối",
+    "status": "Trạng thái",
+    "status_pending": "Chờ duyệt",
+    "status_approved": "Đã duyệt",
+    "status_rejected": "Từ chối",
+    "status_paid": "Đã thanh toán",
+    "approve": "Duyệt",
+    "reject": "Từ chối",
+    "mark_as_paid": "Đánh dấu đã thanh toán",
+    "total_expenses": "Tổng chi phí",
+    "total_amount": "Tổng số tiền",
+    "pending": "Chờ duyệt",
+    "paid": "Đã thanh toán",
+    "created_successfully": "Tạo chi phí thành công",
+    "creation_failed": "Tạo chi phí thất bại",
+    "updated_successfully": "Cập nhật chi phí thành công",
+    "update_failed": "Cập nhật chi phí thất bại",
+    "deleted_successfully": "Xóa chi phí thành công",
+    "deletion_failed": "Xóa chi phí thất bại",
+    "approved_successfully": "Duyệt chi phí thành công",
+    "approval_failed": "Duyệt chi phí thất bại",
+    "rejected_successfully": "Từ chối chi phí thành công",
+    "rejection_failed": "Từ chối chi phí thất bại",
+    "marked_as_paid_successfully": "Đánh dấu đã thanh toán thành công",
+    "payment_failed": "Đánh dấu đã thanh toán thất bại",
+    "delete_confirm": "Bạn có chắc muốn xóa chi phí này?",
+    "no_expenses": "Không tìm thấy chi phí",
+    "search_placeholder": "Tìm kiếm chi phí...",
+    "filter_by_status": "Lọc theo trạng thái",
+    "filter_by_type": "Lọc theo loại",
+    "filter_by_employee": "Lọc theo nhân viên",
+    "stats": {
+      "total_expenses": "Tổng chi phí",
+      "total_amount": "Tổng số tiền",
+      "pending_amount": "Số tiền chờ duyệt",
+      "approved_amount": "Số tiền đã duyệt",
+      "rejected_amount": "Số tiền bị từ chối",
+      "paid_amount": "Số tiền đã thanh toán"
+    }
+  },
+  "salary_component": {
+    "salary_component_management": "Quản lý thành phần lương",
+    "title": "Thành phần lương",
+    "description": "Quản lý thành phần lương và phụ cấp",
+    "create_component": "Tạo thành phần",
+    "edit_component": "Chỉnh sửa thành phần",
+    "component_details": "Chi tiết thành phần",
+    "name": "Tên",
+    "name_required": "Vui lòng nhập tên thành phần",
+    "enter_name": "Nhập tên thành phần",
+    "code": "Mã",
+    "code_required": "Vui lòng nhập mã thành phần",
+    "enter_code": "Nhập mã thành phần",
+    "type": "Loại",
+    "type_required": "Vui lòng chọn loại thành phần",
+    "select_type": "Chọn loại thành phần",
+    "type_allowance": "Phụ cấp",
+    "type_deduction": "Khấu trừ",
+    "type_bonus": "Thưởng",
+    "type_overtime": "Làm thêm giờ",
+    "calculation_type": "Loại tính toán",
+    "calculation_type_required": "Vui lòng chọn loại tính toán",
+    "select_calculation_type": "Chọn loại tính toán",
+    "calc_fixed": "Số tiền cố định",
+    "calc_percentage": "Phần trăm",
+    "calc_formula": "Công thức",
+    "amount": "Số tiền",
+    "amount_required": "Vui lòng nhập số tiền",
+    "percentage": "Phần trăm",
+    "percentage_required": "Vui lòng nhập phần trăm",
+    "formula": "Công thức",
+    "enter_formula": "Nhập công thức tính toán",
+    "is_taxable": "Chịu thuế",
+    "is_active": "Hoạt động",
+    "is_required": "Bắt buộc",
+    "description": "Mô tả",
+    "enter_description": "Nhập mô tả thành phần",
+    "sort_order": "Thứ tự sắp xếp",
+    "total_components": "Tổng thành phần",
+    "active_components": "Thành phần hoạt động",
+    "allowances": "Phụ cấp",
+    "deductions": "Khấu trừ",
+    "taxable": "Chịu thuế",
+    "non_taxable": "Không chịu thuế",
+    "active": "Hoạt động",
+    "inactive": "Không hoạt động",
+    "activate": "Kích hoạt",
+    "deactivate": "Vô hiệu hóa",
+    "created_successfully": "Tạo thành phần thành công",
+    "creation_failed": "Tạo thành phần thất bại",
+    "updated_successfully": "Cập nhật thành phần thành công",
+    "update_failed": "Cập nhật thành phần thất bại",
+    "deleted_successfully": "Xóa thành phần thành công",
+    "deletion_failed": "Xóa thành phần thất bại",
+    "status_updated": "Cập nhật trạng thái thành phần thành công",
+    "status_update_failed": "Cập nhật trạng thái thành phần thất bại",
+    "delete_confirm": "Bạn có chắc muốn xóa thành phần này?",
+    "no_components": "Không tìm thấy thành phần lương",
+    "search_placeholder": "Tìm kiếm thành phần...",
+    "filter_by_type": "Lọc theo loại",
+    "filter_by_status": "Lọc theo trạng thái"
   },
   "meeting": {
     "title": "Cuộc họp",
