--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -445,6 +445,119 @@
       "draft": "Bản nháp",
       "published": "Đã xuất bản",
       "archived": "Đã lưu trữ"
-    }
+    },
+    "versions": "Phiên bản",
+    "versionHistory": "Lịch sử phiên bản",
+    "uploadNewVersion": "Tải lên phiên bản mới",
+    "version": "Phiên bản",
+    "versionRequired": "Vui lòng nhập số phiên bản",
+    "changeLog": "Nhật ký thay đổi",
+    "changeLogRequired": "Vui lòng nhập nhật ký thay đổi",
+    "changeLogPlaceholder": "Mô tả những gì đã thay đổi trong phiên bản này...",
+    "fileRequired": "Vui lòng chọn file",
+    "versionUploaded": "Tải lên phiên bản thành công",
+    "failedToUploadVersion": "Tải lên phiên bản thất bại",
+    "versionDeleted": "Xóa phiên bản thành công",
+    "failedToDeleteVersion": "Xóa phiên bản thất bại",
+    "versionRestored": "Khôi phục phiên bản thành công",
+    "failedToRestoreVersion": "Khôi phục phiên bản thất bại",
+    "currentVersion": "Phiên bản hiện tại",
+    "versionDetails": "Chi tiết phiên bản",
+    "failedToLoadVersions": "Tải lịch sử phiên bản thất bại",
+    "shareDocument": "Chia sẻ tài liệu",
+    "share": "Chia sẻ",
+    "publicLink": "Liên kết công khai",
+    "enablePublicAccess": "Bật quyền truy cập công khai",
+    "publicLinkHint": "Bất kỳ ai có liên kết này đều có thể xem tài liệu",
+    "shareWithUsers": "Chia sẻ với người dùng",
+    "addUser": "Thêm người dùng",
+    "selectUser": "Chọn người dùng",
+    "selectUserPlaceholder": "Tìm kiếm và chọn người dùng...",
+    "userRequired": "Vui lòng chọn người dùng",
+    "permission": "Quyền",
+    "permissionRequired": "Vui lòng chọn quyền",
+    "expiryDate": "Ngày hết hạn",
+    "message": "Tin nhắn",
+    "messagePlaceholder": "Thêm tin nhắn (tùy chọn)",
+    "documentShared": "Chia sẻ tài liệu thành công",
+    "failedToShareDocument": "Chia sẻ tài liệu thất bại",
+    "permissionUpdated": "Cập nhật quyền thành công",
+    "failedToUpdatePermission": "Cập nhật quyền thất bại",
+    "shareRemoved": "Xóa chia sẻ thành công",
+    "failedToRemoveShare": "Xóa chia sẻ thất bại",
+    "linkCopied": "Đã sao chép liên kết",
+    "publicAccessEnabled": "Đã bật quyền truy cập công khai",
+    "publicAccessDisabled": "Đã tắt quyền truy cập công khai",
+    "failedToTogglePublicAccess": "Thay đổi quyền truy cập công khai thất bại",
+    "expires": "Hết hạn",
+    "sharedAt": "Chia sẻ lúc",
+    "noShares": "Không tìm thấy chia sẻ",
+    "failedToLoadShares": "Tải danh sách chia sẻ thất bại",
+    "failedToLoadUsers": "Tải danh sách người dùng thất bại",
+    "permissions": {
+      "view": "Xem",
+      "edit": "Chỉnh sửa",
+      "admin": "Quản trị",
+      "viewDesc": "Có thể xem và tải xuống",
+      "editDesc": "Có thể xem, chỉnh sửa và tải xuống",
+      "adminDesc": "Có thể xem, chỉnh sửa, tải xuống và quản lý chia sẻ"
+    },
+    "details": "Chi tiết",
+    "like": "Thích",
+    "reply": "Trả lời",
+    "commentAdded": "Thêm bình luận thành công",
+    "failedToAddComment": "Thêm bình luận thất bại",
+    "commentUpdated": "Cập nhật bình luận thành công",
+    "failedToUpdateComment": "Cập nhật bình luận thất bại",
+    "commentDeleted": "Xóa bình luận thành công",
+    "failedToDeleteComment": "Xóa bình luận thất bại",
+    "commentLiked": "Đã thích bình luận",
+    "failedToLikeComment": "Thích bình luận thất bại",
+    "replyingTo": "Trả lời",
+    "edited": "đã chỉnh sửa",
+    "addCommentPlaceholder": "Thêm bình luận...",
+    "commentHint": "Nhấn Ctrl+Enter để gửi",
+    "noComments": "Chưa có bình luận nào",
+    "deleteCommentConfirm": "Bạn có chắc muốn xóa bình luận này?",
+    "failedToLoadComments": "Tải bình luận thất bại"
+  },
+  "devices": {
+    "title": "Thiết bị",
+    "description": "Quản lý và theo dõi tất cả thiết bị",
+    "categoryManagement": "Danh mục thiết bị",
+    "categoryDescription": "Quản lý danh mục và phân loại thiết bị",
+    "totalCategories": "Tổng danh mục",
+    "activeCategories": "Danh mục hoạt động",
+    "totalDevices": "Tổng thiết bị",
+    "assignedDevices": "Thiết bị đã gán",
+    "searchCategories": "Tìm kiếm danh mục...",
+    "createCategory": "Tạo danh mục",
+    "editCategory": "Chỉnh sửa danh mục",
+    "noCategories": "Không tìm thấy danh mục",
+    "category": "Danh mục",
+    "description": "Mô tả",
+    "status": "Trạng thái",
+    "devicesCount": "Số thiết bị",
+    "name": "Tên",
+    "code": "Mã",
+    "slug": "Slug",
+    "icon": "Biểu tượng",
+    "nameRequired": "Vui lòng nhập tên danh mục",
+    "codeRequired": "Vui lòng nhập mã danh mục",
+    "slugRequired": "Vui lòng nhập slug",
+    "iconRequired": "Vui lòng nhập tên biểu tượng",
+    "namePlaceholder": "Nhập tên danh mục",
+    "codePlaceholder": "Nhập mã danh mục (ví dụ: CAT001)",
+    "slugPlaceholder": "Nhập slug (ví dụ: laptops)",
+    "descriptionPlaceholder": "Nhập mô tả",
+    "iconPlaceholder": "Nhập tên biểu tượng (ví dụ: laptop, desktop)",
+    "categoryCreated": "Tạo danh mục thành công",
+    "categoryUpdated": "Cập nhật danh mục thành công",
+    "categoryDeleted": "Xóa danh mục thành công",
+    "statusUpdated": "Cập nhật trạng thái thành công",
+    "failedToCreateCategory": "Tạo danh mục thất bại",
+    "failedToUpdateCategory": "Cập nhật danh mục thất bại",
+    "failedToDeleteCategory": "Xóa danh mục thất bại",
+    "failedToUpdateStatus": "Cập nhật trạng thái thất bại"
   }
 } 
