--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -445,6 +445,119 @@
       "draft": "Draft",
       "published": "Published",
       "archived": "Archived"
-    }
+    },
+    "versions": "Versions",
+    "versionHistory": "Version History",
+    "uploadNewVersion": "Upload New Version",
+    "version": "Version",
+    "versionRequired": "Please enter version number",
+    "changeLog": "Change Log",
+    "changeLogRequired": "Please enter change log",
+    "changeLogPlaceholder": "Describe what changed in this version...",
+    "fileRequired": "Please select a file",
+    "versionUploaded": "Version uploaded successfully",
+    "failedToUploadVersion": "Failed to upload version",
+    "versionDeleted": "Version deleted successfully",
+    "failedToDeleteVersion": "Failed to delete version",
+    "versionRestored": "Version restored successfully",
+      "failedToRestoreVersion": "Failed to restore version",
+    "currentVersion": "Current Version",
+    "versionDetails": "Version Details",
+    "failedToLoadVersions": "Failed to load versions",
+    "shareDocument": "Share Document",
+    "share": "Share",
+    "publicLink": "Public Link",
+    "enablePublicAccess": "Enable public access",
+    "publicLinkHint": "Anyone with this link can view the document",
+    "shareWithUsers": "Share with Users",
+    "addUser": "Add User",
+    "selectUser": "Select User",
+    "selectUserPlaceholder": "Search and select a user...",
+    "userRequired": "Please select a user",
+    "permission": "Permission",
+    "permissionRequired": "Please select permission",
+    "expiryDate": "Expiry Date",
+    "message": "Message",
+    "messagePlaceholder": "Add a message (optional)",
+    "documentShared": "Document shared successfully",
+    "failedToShareDocument": "Failed to share document",
+    "permissionUpdated": "Permission updated successfully",
+    "failedToUpdatePermission": "Failed to update permission",
+    "shareRemoved": "Share removed successfully",
+    "failedToRemoveShare": "Failed to remove share",
+    "linkCopied": "Link copied to clipboard",
+    "publicAccessEnabled": "Public access enabled",
+    "publicAccessDisabled": "Public access disabled",
+    "failedToTogglePublicAccess": "Failed to toggle public access",
+    "expires": "Expires",
+    "sharedAt": "Shared At",
+    "noShares": "No shares found",
+    "failedToLoadShares": "Failed to load shares",
+    "failedToLoadUsers": "Failed to load users",
+    "permissions": {
+      "view": "View",
+      "edit": "Edit",
+      "admin": "Admin",
+      "viewDesc": "Can view and download",
+      "editDesc": "Can view, edit and download",
+      "adminDesc": "Can view, edit, download and manage sharing"
+    },
+    "details": "Details",
+    "like": "Like",
+    "reply": "Reply",
+    "commentAdded": "Comment added successfully",
+    "failedToAddComment": "Failed to add comment",
+    "commentUpdated": "Comment updated successfully",
+    "failedToUpdateComment": "Failed to update comment",
+    "commentDeleted": "Comment deleted successfully",
+    "failedToDeleteComment": "Failed to delete comment",
+    "commentLiked": "Comment liked",
+    "failedToLikeComment": "Failed to like comment",
+    "replyingTo": "Replying to",
+    "edited": "edited",
+    "addCommentPlaceholder": "Add a comment...",
+    "commentHint": "Press Ctrl+Enter to send",
+    "noComments": "No comments yet",
+    "deleteCommentConfirm": "Are you sure you want to delete this comment?",
+    "failedToLoadComments": "Failed to load comments"
+  },
+  "devices": {
+    "title": "Devices",
+    "description": "Manage and track all your devices",
+    "categoryManagement": "Device Categories",
+    "categoryDescription": "Manage device categories and classifications",
+    "totalCategories": "Total Categories",
+    "activeCategories": "Active Categories",
+    "totalDevices": "Total Devices",
+    "assignedDevices": "Assigned Devices",
+    "searchCategories": "Search categories...",
+    "createCategory": "Create Category",
+    "editCategory": "Edit Category",
+    "noCategories": "No categories found",
+    "category": "Category",
+    "description": "Description",
+    "status": "Status",
+    "devicesCount": "Devices Count",
+    "name": "Name",
+    "code": "Code",
+    "slug": "Slug",
+    "icon": "Icon",
+    "nameRequired": "Please enter category name",
+    "codeRequired": "Please enter category code",
+    "slugRequired": "Please enter slug",
+    "iconRequired": "Please enter icon name",
+    "namePlaceholder": "Enter category name",
+    "codePlaceholder": "Enter category code (e.g., CAT001)",
+    "slugPlaceholder": "Enter slug (e.g., laptops)",
+    "descriptionPlaceholder": "Enter description",
+    "iconPlaceholder": "Enter icon name (e.g., laptop, desktop)",
+    "categoryCreated": "Category created successfully",
+    "categoryUpdated": "Category updated successfully",
+    "categoryDeleted": "Category deleted successfully",
+    "statusUpdated": "Status updated successfully",
+    "failedToCreateCategory": "Failed to create category",
+    "failedToUpdateCategory": "Failed to update category",
+    "failedToDeleteCategory": "Failed to delete category",
+    "failedToUpdateStatus": "Failed to update status"
   }
 } 
